# python_notebook

./: * and ** in function.ipynb  .gitignore  Class.ipynb  Datetime.ipynb  Dictionary Comprehension.ipynb  List Comprehensions.ipynb  Metaclasses Lab.ipynb  README.md  Redis.ipynb  Simple Hash.ipynb  SkypeBot.ipynb  pyproject.toml  simplehash.ipynb  single_linklist.ipynb  wildcard Parameter in function.ipynb
.ipynb_checkpoints/: Datetime-checkpoint.ipynb  permutation-checkpoint.ipynb  skypebot-checkpoint.ipynb
Design Pattern/: Factory Pattern.ipynb
