[tool.poetry]
name = "python_notebook"
version = "0.1.0"
description = ""
authors = ["Dken <dken.tw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
